# conan-debian-packages

./: .gitignore  README.md  debiantools.py
DSPFilters/: CMakeLists.txt  conanfile.py
Ne10/: 02-increase-cpuinfo-buffer-size.patch  README.md  conanfile.py
Ne10/test_package/: test_package.c
cryptoauthlib/: 01-support-osx.diff  02-fix-install-location.diff  README.md  conandata.yml  conanfile.py
cryptoauthlib/lib/hal/: hal_osx_i2c_userspace.c
cryptoauthlib/patches/: 3.7.0_01-support-osx.diff  3.7.0_02-fix-install-location.diff
cryptoauthlib/test_package/: CryptoAuthLibTest.cpp  conanfile.py
dsp-filters/: conandata.yml  conanfile.py
flatbuffers-c/: 01-RemoveDebugPostfix.diff  README.md  conandata.yml  conanfile.py
flatbuffers-c/patches/: 0.6.1-001-RemoveDebugPostfix.diff
flatbuffers-c/test_package/: test_package.c
glib-2.0/: conanfile.py
hidapi/: CMakeLists.txt  LICENSE.md  README.md  conanfile.py
hidapi/test_package/: test_package.c
libasound2/: README.md  conanfile.py
libasound2/test_package/: test.c
libedgetpu/: README.md  conandata.yml  conanfile.py
libedgetpu/patches/: bazel_conan_libusb_dep.patch  makefile_fixes.patch
libedgetpu/test_package/: CMakeLists.txt  conanfile.py  example.cpp
libglib2.0-0/: conanfile.py
libgpiod/: conandata.yml  conanfile.py
libostree/: 0001-ostree-pull-set-request-timeout.patch  conandata.yml  conanfile.py
libpulse0/: README.md  conanfile.py
libsystemd0/: README.md  conanfile.py
libsystemd0/test_package/: conanfile.py  test.c
libudev1/: README.md  conanfile.py
libudev1/test_package/: CMakeLists.txt  test.c
libuuid1/: README.md  conanfile.py
libuuid1/test_package/: conanfile.py  test.c
mlib/: README.md  conandata.yml  conanfile.py
mlib/test_package/: test_package.c
mpg123/: conandata.yml  conanfile.py
ne-10/: conandata.yml  conanfile.py
ne-10/patches/: 01-build-c-only.patch
speech-sdk/: README.md  conanfile.py
speechsdk/: README.md  conanfile.py
zlib/: conanfile.py
